--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 .blue {
-  color: red;
+  color: #027bff;
 }
 
 h1 {
@@ -213,4 +213,27 @@ ul {
 .work3 a {
   text-decoration: none;
   color: #17191a;
+}
+
+/* Footer */
+.footer {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column-reverse;
+  margin-bottom: 5em;
+}
+.footerIcons,
+.email {
+  flex: 1;
+  vertical-align: center;
+  font-size: 30px;
+  color: #17191a;
+}
+.footerIcons a {
+  margin-left: 45px;
+}
+.footerIcons {
+  margin-top: 25px;
 }
