--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 }
 
 html {
-  font-family: Avenir LT std, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 100;
 }
 
@@ -78,7 +78,7 @@ p {
 }
 .contactMe a {
   color: #027bff;
-  font-weight: 675;
+  font-weight: 500;
   text-decoration: none;
 }
 .contactMe img {
